# PasswordManagerApp

./: README.md
app/: build.gradle
app/cpp/: CMakeLists.txt  aes.h  main.cpp
app/cpp/Kyber1024/: api.h  cbd.c  cbd.h  indcpa.c  indcpa.h  kem.c  kem.h  ntt.c  ntt.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  reduce.c  reduce.h  symmetric-shake.c  symmetric.h  verify.h
app/cpp/argon2/blake2/: blake2.c
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/passwordmanager/: AddNote.java  AddPassword.java  BetterActivityResult.java  EditNote.java  EditPassword.java  Login.java  MainActivity.java  MainMenu.java  Signup.java  StoredData.java  ViewNotes.java  ViewPasswords.java
app/src/main/res/layout/: activity_add_note.xml  activity_add_password.xml  activity_edit_note.xml  activity_edit_password.xml  activity_login.xml  activity_main_menu.xml  activity_signup.xml  activity_view_notes.xml  activity_view_passwords.xml
gradle/wrapper/: gradle-wrapper.properties
